[tool.poetry]
name = "langgraph-llm-powered-agents"
version = "0.1.0"
description = ""
authors = ["Marta Camps"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
black = "^25.1.0"
isort = "^6.0.1"
langchain = "^0.3.24"
langchain-openai = "^0.3.14"
langgraph = "^0.3.34"
grandalf = "^0.8"
dotenv = "^0.9.9"
langchain-ollama = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
